[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "devilry"
requires-python = ">=3.10.0"
dynamic = ["version"]
description = "A system for handling electronic deliveries. See https://github.com/devilry/devilry-django."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Espen Angell Kristiansen", email = "post@appresso.no" },
    { name = "Tor Johansen" },
    { name = "Bendik Opstad" },
    { name = "Vegard Angell" },
    { name = "Magne Westlie" },
    { name = "Ilya Kostolomov" },
    { name = "Christian Tryti" },
    { name = "Rebekka M\u00F8rken" },
    { name = "Stian Julseth" },
    { name = "Åsmund J. Rosendahl" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]
dependencies = [
    "Django>=5.2.3,<5.3.0",
    "gunicorn>=23.0.0",
    "Markdown>=3.3.0,<3.4.0",
    "Pygments>=2.15.0,<2.16.0",
    "django-crispy-forms>=1.14.0,<1.15.0",
    "django-rq",
    "psycopg",
    "cradmin_legacy>=6.1.0,<7.0.0",
    "ievv_opensource>=12.0.0,<13.0.0",
    "xlsxwriter",
    "arrow>=0.12.0,<0.13.0",
    "html2text",
    "djangorestframework",
    "django-allauth[socialaccount]>=0.62.0",
    "requests",
    "urllib3>=1.26.0",
    "pycountry>=18",
    "html-sanitizer",
    "whitenoise",
]

[project.optional-dependencies]
s3storage = [
    "boto3",
    "django-storages",
]
dev = [
    "dj-database-url",
    "openpyxl",
    "model-bakery",
    "BeautifulSoup4",
    "htmls",
    "flake8",
    "tox",
    "pyflakes",
    "boto3",
    "django-storages",
    "django-auth-ldap",
    "pip-tools",
    "django-silk",
    "humanize",  # DEVILRY_MEMORY_DEBUG_ENABLED=True
    "psutil",   # Only used when DEVILRY_MEMORY_DEBUG_ENABLED=True
]
test = [
    "htmls",
    "pytest",
    "pytest-django",
    "pytest-env",
    "model-bakery",
    "coverage",
]
docs = [
    "sphinx",
]

[project.scripts]
ievv = "ievv_opensource.ievvtasks_common.cli:cli"

[tool.hatch.version]
path = "devilry/__init__.py"

[tool.hatch.build]
packages = ["/devilry"]
exclude = [
    "node_modules",
    "/devilry/devilry_theme3/staticsources",
    "/devilry/project/develop/dumps/default.sql",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "6.5.0"
version_files = ["devilry/__init__.py:__version__"]
tag_format = "$version"
update_changelog_on_bump = true


[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

